fixed payment screen alignment

--- a/packages/css/src/index.scss
+++ b/packages/css/src/index.scss
@@ -377,3 +377,7 @@ input[type="number"] {
     @apply mt-lg;
   }
 }
+
+.payment-form-text-input-correction{
+  width: 100% !important;
+}
